@@ -186,3 +186,6 @@
 2016-02-22 Fred Gleason <fredg@paravelsystems.com>
 	* Added a 'WHHttpServer::addStaticSource()' method in
 	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
+2016-02-22 Fred Gleason <fredg@paravelsystems.com>
+	* Added a 'WHHttpServer::addCgiSource()' method in
+	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
